<resources>
    <string name="app_name">Clinica_fisioterapeutica</string>
    <string name="fondo">fondo base</string>
    <string name="campoUsuario">Nombre de usuario</string>
    <string name="campoContraseña">contraseña</string>
    <string name="btnLogin">Ingresar</string>

    <string name="agregar_archivo">Agregar Archivo</string>

    <string name="btnCrearPersona">Agregar</string>
    <string name="btnBuscar">Buscar</string>
    <string name="tvBuscadorPacientes">Ingresa el nombre o apellido del paciente</string>
    <string name="textId">ID Persona</string>
    <string name="textNombre">Nombre</string>
    <string name="textApellido">Apellido</string>
    <string name="textTelefono">Telefono</string>
    <string name="txtEmail">Email</string>
    <string name="textRuc">Ruc</string>
    <string name="textCedula">Cedula</string>
    <string name="textTipoPersona">Tipo de Persona</string>
    <string name="textFechaNacimiento">Fecha de nacimiento</string>
    <string name="textEmail">Email</string>
    <string name="tvId">Id</string>
    <string name="btnGuardarCambios">Guardar</string>
    <string name="btnPacientes">Administrar Pacientes</string>
    <string name="btnFicha">Administrar Fichas Clinicas</string>
    <string name="btnSalir">Salir</string>
    <string name="btnFecha">Fecha</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="msg_loading">Selecciona pdf</string>
    <string name="txtIdFichaClinica">ID Ficha clinica</string>
    <string name="txtMotivoConsulta">Motivo consulta</string>
    <string name="txtDiagnostico">Diagnostico</string>
    <string name="txtObservacion">Observaciones</string>
    <string name="txtEmpleado">Nombre del fisioterapeuta</string>
    <string name="txtPaciente">Nombre del paciente</string>
    <string name="txtProducto">Servicio</string>
    <string name="btnEmpleado">Fisioterapeuta</string>
    <string name="btnPaciente">Paciente</string>
    <string name="btnServicio">Servicio</string>
    <string name="btnEliminarArchivo">Eliminar archivo</string>
    <string name="flagAsistir">Asistio</string>
    <string name="titleHorarios">Seleccione uno de los horarios disponibles</string>
    <string name="btnReserva">Reservas</string>
    <string name="textCategoria">Categoria</string>
    <string name="txtSubcategoria">Sub Categoria</string>
    <string name="textFechaInicio">Fecha inicio</string>
    <string name="txtFechaFin">Fecha fin</string>
    <string name="btnFiltro">Filtrar</string>

</resources>
