<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo1"
    tools:context=".Controllers.Paciente.AgregarEditarPersonaActivity">

    <EditText
        android:id="@+id/idFichaClinica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/textId"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="69dp" />

    <Button
        android:id="@+id/btnFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openDataPicker"
        android:text="@string/btnFecha"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="429dp" />

    <EditText
        android:id="@+id/tipoPersona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/textTipoPersona"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="384dp" />

    <EditText
        android:id="@+id/producto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textCedula"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="339dp" />

    <EditText
        android:id="@+id/cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textRuc"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="294dp" />

    <EditText
        android:id="@+id/empleado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textEmail"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="249dp" />

    <EditText
        android:id="@+id/observacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textTelefono"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="204dp" />

    <EditText
        android:id="@+id/diagnostico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textApellido"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="158dp" />

    <EditText
        android:id="@+id/motivoConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textNombre"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="113dp" />

    <EditText
        android:id="@+id/fechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/textFechaNacimiento"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="429dp" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="166dp"
        android:layout_height="43dp"
        android:background="@color/colorPrimary"
        android:onClick="AgregarEditarPersona"
        android:text="@string/btnGuardarCambios"
        android:textColor="@color/colorWhite"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="544dp" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="159dp"
        android:layout_height="43dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="eliminarModelo"
        android:text="@string/btnEliminar"
        android:textColor="@color/colorWhite"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="544dp" />

</androidx.constraintlayout.widget.ConstraintLayout>