<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo1"
    tools:context=".Controllers.Fichas.AgregarEditarFichaActivity">

    <Spinner
        android:id="@+id/spinnerArchivos"
        android:layout_width="208dp"
        android:layout_height="53dp"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="448dp" />

    <EditText
        android:id="@+id/txtFile"
        android:layout_width="216dp"
        android:layout_height="49dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="396dp" />

    <Button
        android:id="@+id/btnEliminarArchivo"
        android:layout_width="133dp"
        android:layout_height="56dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="eliminarArchivoFicha"
        android:text="@string/btnEliminarArchivo"
        android:textColor="@color/colorWhite"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="445dp" />

    <Button
        android:id="@+id/btnAgregarArchivo"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:background="@color/secondaryColor"
        android:onClick="launchPicker"
        android:text="Agregar archivo"
        android:textColor="@color/secondaryTextColor"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="396dp" />

    <EditText
        android:id="@+id/cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/txtPaciente"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="255dp" />

    <EditText
        android:id="@+id/empleado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/txtEmpleado"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="203dp" />

    <EditText
        android:id="@+id/txtServicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="300dp" />

    <Spinner
        android:id="@+id/spinnerServicio"
        android:layout_width="213dp"
        android:layout_height="51dp"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="345dp" />

    <Button
        android:id="@+id/btnCliente"
        android:layout_width="126dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="buscarCliente"
        android:text="@string/btnPaciente"
        android:textColor="@color/primaryTextColor"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="250dp" />

    <Button
        android:id="@+id/btnEmpleado"
        android:layout_width="128dp"
        android:layout_height="46dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="buscarEmpleado"
        android:text="@string/btnEmpleado"
        android:textColor="@color/primaryTextColor"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="202dp" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="166dp"
        android:layout_height="52dp"
        android:background="@color/colorPrimary"
        android:onClick="AgregarEditarPersona"
        android:text="@string/btnGuardarCambios"
        android:textColor="@color/colorWhite"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="544dp" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="166dp"
        android:layout_height="51dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="eliminarModelo"
        android:text="@string/btnEliminar"
        android:textColor="@color/colorWhite"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="546dp" />

    <EditText
        android:id="@+id/motivoConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/txtMotivoConsulta"
        android:inputType="textLongMessage"
        tools:layout_editor_absoluteX="182dp"
        tools:layout_editor_absoluteY="69dp" />

    <EditText
        android:id="@+id/idFichaClinica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/txtIdFichaClinica"
        android:inputType="textPersonName"
        android:visibility="visible"
        tools:layout_editor_absoluteX="182dp"
        tools:layout_editor_absoluteY="25dp" />

    <EditText
        android:id="@+id/observacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtObservacion"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="182dp"
        tools:layout_editor_absoluteY="160dp" />

    <EditText
        android:id="@+id/diagnostico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/txtDiagnostico"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="182dp"
        tools:layout_editor_absoluteY="114dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_search"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="396dp" />

</androidx.constraintlayout.widget.ConstraintLayout>