<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.Turnos.AgregarReservaActivity">

    <EditText
        android:id="@+id/empleado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/txtEmpleado"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEmpleado"
        android:layout_width="139dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="buscarEmpleado"
        android:text="@string/btnEmpleado"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintStart_toEndOf="@+id/empleado"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/txtPaciente"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarAgenda" />

    <Button
        android:id="@+id/btnCliente"
        android:layout_width="139dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="buscarCliente"
        android:text="@string/btnPaciente"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintStart_toEndOf="@+id/cliente"
        app:layout_constraintTop_toBottomOf="@+id/calendarAgenda" />

    <CalendarView
        android:id="@+id/calendarAgenda"
        android:layout_width="348dp"
        android:layout_height="271dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empleado" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAgenda"
        android:layout_width="359dp"
        android:layout_height="119dp"

        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="352dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/titleHorarios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cliente" />
</androidx.constraintlayout.widget.ConstraintLayout>