<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/opc1"
    tools:context=".Controllers.Fichas.FiltroActivity">

    <EditText
        android:id="@+id/fechaNacimiento2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/textFechaNacimiento"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/fechaNacimiento3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFecha2"
        app:layout_constraintTop_toBottomOf="@+id/btnEmpleado3" />

    <Button
        android:id="@+id/btnFecha3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="134dp"
        android:onClick="openDataPicker"
        android:text="@string/btnFecha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fechaNacimiento3"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFecha2" />

    <EditText
        android:id="@+id/fechaNacimiento3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="137dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/textFechaNacimiento"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFecha3"
        app:layout_constraintTop_toBottomOf="@+id/fechaNacimiento2" />

    <Button
        android:id="@+id/btnFecha2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:onClick="openDataPicker"
        android:text="@string/btnFecha"
        app:layout_constraintBottom_toTopOf="@+id/btnFecha3"
        app:layout_constraintEnd_toStartOf="@+id/fechaNacimiento2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSubCategoria" />

    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/empleado2"
        app:layout_constraintTop_toBottomOf="@+id/empleado2" />

    <Spinner
        android:id="@+id/spinnerSubCategoria"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnFecha2"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCategoria"
        app:layout_constraintStart_toStartOf="@+id/btnFecha2"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnEmpleado3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:layout_marginBottom="228dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="buscarEmpleado"
        android:text="@string/btnEmpleado"
        android:textColor="@color/primaryTextColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/fechaNacimiento2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/empleado2"
        app:layout_constraintTop_toBottomOf="@+id/btnCliente3" />

    <Button
        android:id="@+id/btnCliente3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="2dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="buscarCliente"
        android:text="@string/btnPaciente"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/btnEmpleado3"
        app:layout_constraintEnd_toEndOf="@+id/btnEmpleado3"
        app:layout_constraintStart_toStartOf="@+id/btnEmpleado3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cliente3"
        android:layout_width="239dp"
        android:layout_height="0dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/txtPaciente"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/empleado2"
        app:layout_constraintStart_toStartOf="@+id/empleado2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/empleado2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/txtEmpleado"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/spinnerCategoria"
        app:layout_constraintEnd_toStartOf="@+id/btnEmpleado3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cliente3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="158dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="111dp"
        android:layout_marginBottom="109dp"
        android:text="@string/textCategoria"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/empleado2"
        app:layout_constraintTop_toTopOf="@+id/cliente3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:text="@string/txtSubcategoria"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/spinnerSubCategoria"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCategoria"
        app:layout_constraintStart_toStartOf="@+id/spinnerSubCategoria"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategoria" />
</androidx.constraintlayout.widget.ConstraintLayout>