<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo1"
    tools:context=".Controllers.Turnos.EditarReservaActivity">

    <TextView
        android:id="@+id/idReserva"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:layout_marginStart="188dp"
        android:layout_marginLeft="188dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="168dp" />

    <TextView
        android:id="@+id/fecha"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:layout_marginStart="188dp"
        android:layout_marginLeft="188dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="208dp" />

    <TextView
        android:id="@+id/horaInicio"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:layout_marginStart="188dp"
        android:layout_marginLeft="188dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="248dp" />

    <TextView
        android:id="@+id/horaFin"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:layout_marginStart="188dp"
        android:layout_marginLeft="188dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="288dp" />

    <EditText
        android:id="@+id/observacion"
        android:layout_width="269dp"
        android:layout_height="105dp"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="126dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtObservacion"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="346dp" />

    <CheckBox
        android:id="@+id/flagAsistir"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:layout_marginStart="290dp"
        android:layout_marginLeft="290dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/flagAsistir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="109dp" />

    <Button
        android:id="@+id/cancelar"
        android:layout_width="94dp"
        android:layout_height="70dp"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="cancelarReserva"
        android:text="@string/btnEliminar"
        android:textColor="#EBFFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/btnGuardar"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="493dp" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="100dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:background="@color/colorPrimary"
        android:onClick="flag"
        android:text="@string/btnGuardarCambios"
        android:textColor="#C9FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelar"
        tools:layout_editor_absoluteY="495dp" />
</androidx.constraintlayout.widget.ConstraintLayout>